<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/bt4"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/bt3"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/bt4" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="180dp"
        android:layout_alignParentTop="false"
        android:layout_marginTop="20dp"
        android:src="@drawable/logotipo_agro_manager" />

    <Button
        android:id="@+id/bt1"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/bt2"
        android:layout_centerVertical="true"
        android:onClick="Menu"
        android:text="@string/bt1" />

    <Button
        android:id="@+id/bt3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/bt2"
        android:layout_below="@+id/bt2"
        android:layout_marginTop="25dp"
        android:onClick="Menu"
        android:text="@string/bt3" />

    <Button
        android:id="@+id/bt2"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/bt1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:onClick="Menu"
        android:text="@string/bt2" />
    
</RelativeLayout>
